--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
 name = "rust-strings"
-version = "0.1.0"
+version = "0.1.1"
 authors = ["pjmlp <pjmlp@progtools.org>"]
+edition = "2018"
 
 [dependencies]
 num = "0.2.0"
